--- a/src/main/webapp/res/css/index.css
+++ b/src/main/webapp/res/css/index.css
@@ -1,53 +1,359 @@
+/*主色系*/
+@base0: #FB5D00;
+@base1:#BB6430;
+@base2:#A23C00;
+@base3: #FFAF80;
+@base4: #FFEFE6;
+/*辅色系*/
+@second0: #00A37A;
+@second1: #1F7A63;
+@second2: #00694F;
+@second3: #80FFDF;
+@second4: #E6FFF9;
+/*背景灰色*/
+@bgGray: rgb(246, 246, 246);
+/*内容宽度上、下限*/
+@bodyMinWidth: 910px;
+@bodyMaxWidth: 1024px;
+
+@topHeaderHeight: 30px;
+@searchHeaderHeight: 140px;
+
+* {
+	box-sizing:border-box;
+}
 body {
 	margin: 0;
-	background: rgb(246, 246, 246);
+	background: @bgGray;
+	font-family:  Microsoft YaHei,tahoma,arial,Hiragino Sans GB,sans-serif;
 }
-
+.animate{
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
 .block-wrap {
 	margin: auto;
-	max-width: 1190px;
+	max-width: @bodyMaxWidth;
+	min-width: @bodyMinWidth;
 }
-
+.block-spacer{
+	display: block;
+	content: "";
+	height: 20px;
+}
+.go-top{
+	display: none;
+}
+/*顶栏条*/
 .top-header {
-	background: rgb(227, 227, 227);
+	background: darken(@bgGray, 5%);
 	font-size: 14px;
-	height: 30px;
-	line-height: 30px;
+	height: @topHeaderHeight;
+	line-height: @topHeaderHeight;
 	border-bottom: 1px solid rgb(210, 210, 210);
 	color: rgb(110, 100, 100);
-}
-.top-header .img-label{
-	vertical-align: middle;
-	margin-right:5px;
-}
-.top-header ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
+	min-width: @bodyMinWidth;
+	
+	.img-label{
+		vertical-align: middle;
+		margin-right:5px;
+	}
+	
+	.left-icons {
+		float: left;
+	}
+	
+	ul {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		
+		li {
+			float: right;
+			padding: 0 10px;
+		}
+		.spacer {
+			overflow: hidden;
+			padding: 0 0;
+			margin: 11px 5px;
+			width: 1px;
+			height: 10px;
+			background-color: #c3c3c3;
+		}
+		
+		&:after {
+			content: "";
+			clear: both;
+		}
+	}
+	
+	a{
+		color: rgb(110, 100, 100);
+		text-decoration: none;
+		
+		&:hover{
+			color: #FB5D00;
+			cursor: pointer;
+		}
+		&.category{
+			width:200px;
+		}
+	}
 }
 
-.top-header ul:after {
-	content: "";
-	clear: both;
+/*搜索栏*/
+.search-header {
+	height: @searchHeaderHeight;
+	min-width: @bodyMinWidth;
+	background: #fff;
+	padding:25px 0;
+	
+	img{
+		verticle-align: middle;
+	}
+	.logo {
+		width:200px;
+	}
+	.slogan {
+		font-size:16px;
+		color:@base1;
+		font-weight:lighter;
+		text-align: center;
+		word-spacing: 0.5em;
+		letter-spacing: 0.3em;
+	}
+	
+	.block-vert{
+		display: table-cell;
+		vertical-align: middle;
+	}
+	.searchWrap{
+		padding-left: 100px;
+		
+		.form{		
+			position:relative;
+		}
+		
+		input{
+			padding:9px ;
+			font-size:16px;
+			border: 2px solid @base0;
+ 			width:550px;
+ 			outline: none;
+ 			box-sizing: border-box;
+		}
+		button{
+			position: absolute;
+			border: 2px solid @base0;
+			border-left:none;
+			top:0;
+			right: 0;
+			height: 100%;
+			background: @base0;
+			font-size: 16px;
+			color: #fff;
+			padding: 0 20px;
+			outline: none;
+			letter-spacing: 0.5em;
+		}
+		.sugg-words{
+			margin-top: 5px;
+			color: lighten(#000, 50%);
+		}
+	}
 }
 
-.top-header ul li {
-	float: right;
-	padding: 0 10px;
-}
-.top-header ul li:hover{
-	color: #FB5D00;
-	cursor: pointer;
-}
-.top-header ul.left-icons {
-	float: left;
+/*菜单导航*/
+.nav-bar{
+	height: 40px;
+	background: @base0;
+	min-width: @bodyMinWidth;
+	
+	a{
+		text-decoration:none;
+		color: lighten(@second3, 20%);
+	}
+	
+	&:after{
+		clear:both;
+		content:"";
+	}
+	ul {
+		list-style: none;
+		line-height: 40px;
+		padding: 0;
+		margin:0;
+		
+		&.right-icons {
+			float: right;
+		}
+		
+		img {
+			height: 24px;
+			vertical-align: middle;
+			margin: 0 4px;
+		}
+		li {
+			font-size: 16px;
+			float:left;
+ 			a{
+				display:inline-block;
+ 				padding: 0 20px;
+				
+				&:hover{
+					background: darken(@base0,10%);
+				}
+				.stress{
+					background: #fff;
+					color: #333;
+					padding:5px 15px;
+					border-radius: 5px;
+ 				}
+			}
+		}
+	}
 }
 
-.top-header li.spacer {
-	overflow: hidden;
-	padding: 0 0;
-	margin: 11px 5px;
-	width: 1px;
-	height: 10px;
-	background-color: #c3c3c3;
+/*滚动广告*/
+.carousel{
+	background-image: url("../img/bg-carousel.jpg");
+	
+	.block-wrap{
+		background: rgba(255,255,255,0.9);
+		padding:10px;
+		box-shadow: 0 1px 3px rgba(167,167,167,.4);
+	}
+	.carousel-items{
+		height: 280px;
+	}
+}
+
+/*Grid系统*/
+.grid{
+	display:block;
+	
+	&:after{
+		display:block;
+		clear:both;
+		content:"";
+	}
+	.item {
+		float:left;
+		text-align: center;
+	}
+	.c1{
+		width:100%/6;
+	}
+	.c2{
+		width:100%/6 * 2;
+	}
+	.c3{
+		width:50%;
+	}
+	.c4{
+		width:100%/6 * 4;
+	}
+	.c5{
+		width:100%/6 * 5;
+	}
+	.c6{
+		width:100%;
+	}
+}
+.sc-title{
+	font-size:22px;
+	font-weight: normal;
+	text-align: left;
+	color: @second0;
+}
+.showcase{
+ 	position: relative;
+ 	
+ 	.animate;
+ 	
+ 	&:hover{
+ 		box-shadow: 0 0 8px 1px darken(@base0, 20%);
+ 	}
+ 	
+	a{
+		width: 280px;
+		height: 280px;
+		
+		img{
+			width: 280px;
+    		height: 280px;
+		}
+	}
+}
+
+/*右边导航*/
+.sidenav-right{
+	display:none;
+	position:fixed;
+	top: 100px;
+	right: 20px;
+	background: #fff;
+	padding: 10px;
+	border: 1px solid #888;
+	box-shadow: 2px 2px 3px 0 rgba(0,0,0,0.2);
+	border-radius: 3px;
+
+	.caption{
+ 		color:@base0;
+ 	}
+	ul{
+		list-style:none;
+		padding:0;
+		margin:0;
+		
+		a{
+			font-size: 14px;
+			text-decoration:none;
+			color: #a5a5a5;
+			display: block;
+			padding:10px 5px;
+		}
+	}
+}
+.sidenav-left{
+	position:fixed;
+	top: 0;
+	left: 0;
+	background: darken(@second0, 27%);
+	height: 100%;
+	width:36px;
+	
+	ul{
+		list-style:none;
+		padding:0;
+		margin-top:100px;
+		
+		a{
+			font-size: 14px;
+			text-decoration:none;
+			color: #a5a5a5;
+			display: block;
+			padding-top:25px;
+			text-align: center;
+			img{
+				width:20px;
+			}
+		}
+		.label{
+			font-size:12px;
+			display:block;
+			border-radius:10px;
+			background: @base0;
+			color:#fff;
+			padding:2px;
+		}
+		.stress{
+			color:@base0;
+			padding-left: 5px;
+			padding-right:5px;
+ 		}
+	}
 }
